# -

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
app/android/: README.md  build.gradle.kts  settings.gradle.kts
app/android/app/: build.gradle.kts
app/desktop/: README.md  app.py  main.py
app/desktop/controllers/: pipeline_controller.py  report_controller.py  sync_controller.py
app/desktop/core/: background.py  logger.py  report_diff.py  report_loader.py
app/desktop/ui/: style.py  (+5 more)
core/config/: models.py
core/pipeline/: __init__.py  partitioner.py  scanner.py  style_processor.py
core/reporting/: __init__.py  report_builder.py
core/text/: __init__.py  generator.py  ollama_client.py  sensitive.py  template_repository.py  templates.py
core/watermark/: processor.py
docs/: architecture.md  file_conventions.md  stages.md  workflow.md
docs/inbox/: README.md  tmp_decoded.txt  博潮3.0.md
docs/interfaces/: central_kitchen.md  examples.md
docs/ops/: backup_policy.md
docs/ui/: desktop_wireframe.md  style_guide.md
docs/workspace/: README.md  board.md  desktop_plan.md  pyside6_eval.md  report_sync.md  sync_contract.md  workspace1.md  workspace2.md  workspace2_next.md  workspace3.md  workspace3_next.md  workspace4.md
scripts/: central_kitchen.py  copy_batch.py  report_summary.py  run_checks.py  run_demo.py  validate_manifest.py
tests/desktop/: test_device_scanner.py  test_sync_panel.py  test_sync_service.py
tests/integration/: test_pipeline.py  test_pipeline_fallback.py
tests/unit/: test_copywriting_generator.py  test_delay_config.py  test_device_assignment.py  test_price_config.py  test_report_builder.py  test_sensitive_filter.py  test_task_partitioner.py  test_template_repository.py
(+34 files in other folders)
